--- a/faisal/description.css
+++ b/faisal/description.css
@@ -4,9 +4,10 @@
 }
 #main{
     width:100%;
-    height:830px;
+    /* height:830px; */
     margin: auto;
     background-color: rgb(235, 237, 245);
+    padding-bottom: 30px;
 }
 #main1{
     display: flex;
@@ -53,11 +54,11 @@
 }
 #butt1{
     /* border:1px solid red; */
-    width:80%;
+    width:98%;
     margin: auto;
 }
 #butt1>button{
-    width:200px;
+    width:40%;
     height:60px;
     margin-top: 50px;
     background-color: rgb(19, 206, 128);
@@ -226,6 +227,7 @@
     height:400px
 }
 #bottom{
+    width: 100%;
     background-color: rgb(12, 50, 69);
    padding-top: 30px;
    padding-bottom: 30px;
@@ -238,4 +240,55 @@
     color: rgb(193, 201, 216);
     text-align: center;
     
+}
+
+@media all and (min-width: 200px) and (max-width: 950px) {
+    #img1{
+        /* margin-left: 150px; */
+        width:100%;
+        text-align: center;
+        
+    }
+    #img1>img{
+        width:100%
+    }
+    #main1{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        width:100%;
+        text-align: center;
+    }
+    #mid1{
+        width:100%;
+        /* border: 1px solid red; */
+        text-align: center;
+    }
+    #mid2{
+        width:100%;
+        display: grid;
+    }
+    #mid2>div{
+        width:80%;
+        margin: auto;
+    }
+    #middle{
+        width:90%;
+        margin: auto;
+        display: grid;
+    }
+    #bot2{
+        width:80%;
+        margin: auto;
+        text-align: center;
+    }
+    #bot1{
+        display: none;
+    }
+    #bot3{
+        display: none;
+    }
+    #cont2>img{
+        width:70%
+    }
+
 }
