--- a/faisal/video.css
+++ b/faisal/video.css
@@ -12,7 +12,7 @@
 #webi{
     width:20%;
     margin-top: 150px;
-    margin-left:145px;
+    margin-left:10%;
     font-size: 20px;
     font-weight: 500;
     line-height: 28px;
@@ -22,19 +22,23 @@
 #cont2{
     border:0px;
     border-radius: 8px;
+    width:65%
     
 }
 #cont2>iframe{
-    width:250%;
+    width:100%;
     height:425px;
+    border-radius: 15px;
 }
 #about{
     margin-top: 40px;
-    margin-left:145px
+    margin-left:10%;
+    padding-right: 20px;
 }
 .vid{
-    margin-right: 30px;
+    /* margin-right: 30px; */
     width:30%;
+    
 }
 .vid>h3{
     /* width:100%; */
@@ -80,14 +84,16 @@
 #bottom{
     background-color: rgb(235, 245, 243);
     width:100%;
-    height:500px;
+    /* height:500px; */
     margin: auto;
+    padding-bottom:70px
 }
 #bot1{
-    width:500px;
-    padding-left: 150px;
+    width:100%;
+    /* padding-left: 150px; */
     /* border:1px solid red;  */
     margin: auto;
+    text-align: center;
     padding-top: 60px;
     font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 44px;
@@ -95,15 +101,7 @@
     Line-height: 60px;
      color: rgb(29, 31, 36);
 }
-@media all and (min-width: 100px) and (max-width: 1000px) {
-    #cont{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-    }
-    .vid{
-        width:100%
-    }
-}
+
 
 #bot2{
     width:85%;
@@ -137,4 +135,69 @@
     margin-bottom: 20px;
     color:   rgb(0, 120, 96);
     font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+
+
+@media all and (min-width: 500px) and (max-width: 950px) {
+    #cont2>iframe{
+        width:100%;
+
+    }
+    #cont2{
+        width:100%
+        
+    }
+    #cont{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .vid{
+        
+        width:100%;
+        /* padding: 20px; */
+        padding-top: 20px;
+    }
+    
+    #bot2{
+        
+        
+        display: grid;
+        grid-template-columns: repeat(1,fr);
+       
+    }
+    #bot2>div{
+        width:90%
+    }
+}
+@media all and (min-width: 100px) and (max-width: 499px) {
+    #cont2>iframe{
+        width:100%;
+
+    }
+    #cont2{
+        width:100%
+        
+    }
+    #cont{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .vid{
+        
+        width:100%;
+        /* padding: 20px; */
+        padding-top: 20px;
+    }
+    
+    #bot2{
+        
+        
+        display: grid;
+        grid-template-columns: repeat(1,fr);
+       
+    }
+    #bot2>div{
+        width:90%
+    }
 }
