--- a/sabdar/navbar.css
+++ b/sabdar/navbar.css
@@ -23,8 +23,9 @@
     background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     /* align-items: center; */
-    
-  
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
   
   .navbar a {
