--- a/sabdar/navbar.css
+++ b/sabdar/navbar.css
@@ -3,9 +3,9 @@
     box-sizing: border-box;
   }
   
-  /* body {
-    /* margin: 0; */
-  /* } */ 
+   body { 
+    margin: 0;
+  } 
   
   /* #container21{
     margin: 0;
